k8s/logging/kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: logging
spec:
  ports:
    - port: 5601
      protocol: TCP
      targetPort: 5601
  selector:
    app: kibana
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: logging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: kibana:9.4.0
          ports:
            - containerPort: 5601
