k8s/logging/logging-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logging-ingress
  namespace: logging
spec:
  ingressClassName: nginx
  rules:
    - host: kibana.recommendation-system.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601
